# gym-bro

./: Cargo.toml  docker-compose.yml  rustfmt.toml
migrations/: 20251116155441_create_training_sessions.up.sql  20251118145910_init.down.sql  20251118151235_init.down.sql  20251118151235_init.up.sql
src/: app_config.rs  database.rs  main.rs  training.rs  training_handlers.rs  training_models.rs  training_session.rs
src/models/: mod.rs  response.rs  training.rs  user.rs
src/routes/: auth.rs  mod.rs  trainings.rs
src/utils/: password_manager.rs  token_manager.rs
