[package]
name = "gym_bro"
version = "0.1.0"
edition = "2024"

[dependencies]
time = "0.3"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "macros",
  "chrono",
  "uuid",
  "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
dotenvy = "0.15"
bcrypt = "0.17.1"
jsonwebtoken = "8.3"
